      directory to check the demo script).
    * vignette: added to inst/doc based on a manuscript
      submitted to JSS. Dependencies are excluded and
      a verbatim code is placed in the vignette instead.
    * DOLINA data sets: reworked. A more simple example
      is given: dol.count, dol.samp, dol.taxa. The previous
      full data set is available at: hdl:1902.1/12060.
    * mefaCrosstab: xtabs function is now used for
      crosstabulation internally, instead of the
      inflate function. This implementation allows
      non integer calues as 'count'. All other
      functions (stcs, melt, aggregate) accept it, too.
      The inflate function is in use for integer counts
      used by stcs when expand is TRUE. Help pages and
      examples modified accordingly.
    * boxplot: new argument 'all' for plotting all
      segments and the separate segments in the same graph.
    * melt.mefa: now accepts mefa object with xtab
      element without dimnames. In this case, rows and
      columns are names by integers.
    * mefa: the restriction of at least 2 columns for
      samp and taxa tables is no longer necessary.
    * qvector: na.rm and ... arguments added.
    * plot: labels corrected.
    * melt.mefa: takes care of zero.pseudo flags silently,
      and returns call attribute as well of raw=FALSE.
    * print.mefa: returns segment names to avoid confusion
      when all other details are the same.
    * mefaTables: xtab.fixed argument now works properly.
    * stcs: argument zero.pseudo now accepts a two element
      vector for species and segments, respectively.
    * summary.mefa: returns list with different names
      for [1:4] elements due to consistency with
      samples/taxa sides: s.rich, s.abu, t.occ, t.abu,
      and these are used in the print.summary method, too.
      Accordingly, the class has now a call attribute to
      return it by the summary.
    * help pages: lots of minor improvements.
    * R code: annotated with comments.