@@ -20,14 +20,14 @@ raw.out = FALSE, drop.zero = FALSE, \dots)
   \item{\dots}{other arguments passed to the function \code{\link{stcs}}.}
 }
 \details{
-If the 'mefa' object contains only a data matrix without dimnames, rows and columns are numbered before melting.
+If a 'mefa' objet has original segments, the function returns those. If the 'mefa' object contains only a data matrix without dimnames, rows and columns are numbered before melting.
 
 Besides the goal to convert from wide format to long format, this 'mefa' specific implementation is also useful, if a segment is not coded along with the long formatted database, but can be found in a linked table of samples or species. In this way, a 'mefa' object with new segments can be defined easily.
 
 If melting is done with a vector that is not part of the tables inside the 'mefa' object, it must have a class attribute to be recognised, use e.g. the \code{\link{as.factor}} function (see 'Examples').
 }
 \value{
-An object of class 'stsc' if \code{raw = FALSE}, pure 'data.frame' othervise.
+An object of class 'stsc' if \code{raw = FALSE}, pure 'data.frame' othervise (because the zero count flag cannot be applied).
 }
 \references{
 \enc{Sólymos}{Solymos} P. 2008. mefa: an R package for handling and reporting count data. \emph{Community Ecology} 9, 125--127.
@@ -47,8 +47,10 @@ Similar function in the \strong{simba} package by  Gerald Jurasinski is the \cod
 \examples{
 data(dol.count, dol.samp, dol.taxa)
 x <- mefa(stcs(dol.count), dol.samp, dol.taxa)
-## Long format with undefined segment
+## Long format with original segments
 melt(x)
+## Long format with undefined segment
+melt(as.mefa(x, segment = FALSE))
 ## These two are identical
 melt(x, "microhab")
 melt(x, x$samp$microhab) ## this is a factor
